--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@ title: Paul Famiglietti
 ---
 
 <div id="home">
-  <ul class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <p><span>{{ post.date | date_to_string }}</span> &raquo; <h1><a href="{{ post.url }}">{{ post.title }}</a></h1></p>
     {% endfor %}
-  </ul>
 </div>
